# lore-ingestor

./: .dockerignore  .gitignore  Dockerfile  Makefile  Reademe.md  claude_config.json  docker-compose.yml  pyproject.toml  requirements.txt  thoughts.md
cli/: main.py
docs/: Ingestion_plan.md  NextSteps.md  events.md  plan.md
lore_ingest/: api.py  chunk.py  events.py  normalize.py  persist.py  pushgw.py  segment.py  segment_profiles.py  temporal.py
lore_ingest/parsers/: __init__.py  base.py  docx.py  pdf.py  txt_md.py
mcp_server/: server.py
scripts/: temporal_smoke.py
service/: __init__.py  http_app.py  temporal_start.py  temporal_worker.py  wait_for_temporal.py  watcher.py
tests/: conftest.py  test_api.py  test_http.py  test_idempotency.py  test_profiles.py  test_segment.py  test_temporal_workflow.py  test_watcher.py
